--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ gunicorn==20.1.0
 idna==2.10
 oauthlib==3.1.0
 Pillow==8.2.0
+psycopg2-binary==2.8.6
 pycparser==2.20
 PyJWT==2.1.0
 python3-openid==3.2.0
