--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ python3-openid==3.2.0
 pytz==2021.1
 requests==2.25.1
 requests-oauthlib==1.3.0
+six==1.16.0
 sqlparse==0.4.1
 urllib3==1.26.5
 whitenoise==5.2.0
